[tool.poetry]
name = "trio-asyncgpio-demo"
version = "0.1.0"
description = "Several ways of using asyncgpio with Trio"
authors = ["Michael Green"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
asyncgpio = "^0.4.4"
trio-serial = "^0.1.0"
trio = "^0.17.0"
anyio = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"